src/assets/css/screen.css
/* ... */
.gh-form.success {
    @apply pointer-events-none;
}

.gh-form.error {
    @apply ring-1 ring-red-500;
}

.gh-form:hover {
    background-color: rgb(0 0 0 / 0.065);
}

.has-light-text .gh-form:hover,
.gh-footer.has-accent-color .gh-form:hover {
    background-color: rgb(255 255 255 / 0.15);
}

.gh-form-input {
    @apply absolute w-full h-full inset-0 border-0 bg-transparent outline-none leading-tight rounded-lg;
    padding-inline: 26px;
    font-size: inherit;
    letter-spacing: inherit;
    transition: 0.3s ease-in-out;
}

.gh-form-input::placeholder,
button.gh-form-input {
    color: rgb(0 0 0 / 0.3);
}

:is(.has-serif-title, .has-mono-title):not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) .gh-form-input {
    padding-inline: 20px;
}

.gh-form.gh-form.success .gh-form-input {
    @apply opacity-50;
}

.has-light-text .gh-form-input,
.gh-footer.has-accent-color .gh-form-input {
    @apply text-white;
}

.has-light-text .gh-form-input::placeholder,
.has-light-text button.gh-form-input,
.gh-footer.has-accent-color .gh-form-input::placeholder {
    color: rgb(255 255 255 / 0.55);
}

button.gh-form-input {
    @apply text-left cursor-pointer;
    padding-inline-start: 56px;
    color: var(--color-secondary-text);
}

:is(.has-serif-title,.has-mono-title):not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) button.gh-form-input {
    padding-inline-start: 50px;
}

.gh-form .gh-button {
    @apply absolute right-[6px] h-[44px];
    padding-inline: 32px;
    font-size: inherit;
}

.gh-form > svg {
    @apply relative left-[22px] w-[20px] h-[20px];
    color: var(--color-secondary-text);
}

:is(.has-serif-title,.has-mono-title):not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) .gh-form > svg {
    @apply left-[16px];
}

.gh-form .gh-button svg {
    @apply hidden absolute mt-[1px];
}

.gh-form:is(.loading, .success) .gh-button span {
    @apply hidden;
}

.gh-form.loading .gh-button svg:first-of-type {
    @apply block;
}

.gh-form.success .gh-button svg:last-of-type {
    @apply block;
}

.gh-form [data-members-error] {
    @apply absolute top-full w-full mt-[10px] text-2xl leading-normal;
}

@media (max-width: 576px) {
    .gh-form {
        @apply text-2xl;
    }

    .gh-form .gh-button {
        padding-inline: 12px;
    }

    .gh-form .gh-button span span {
        @apply hidden;
    }

    .gh-form .gh-button span svg {
        @apply inline static w-5 h-5 mt-[2px];
    }
}

/* 5. Layout
/* ---------------------------------------------------------- */

.gh-viewport {
    @apply relative flex flex-col min-h-screen;
}

.gh-outer {
    padding: 0 max(4vmin, 20px);
}

.gh-outer .gh-outer {
    @apply p-0;
}

.gh-inner {
    @apply mx-auto w-full;
    max-width: var(--container-width);
}

.gh-main {
    @apply flex-grow;
}

.gh-canvas,
.kg-width-full.kg-content-wide {
    @apply grid;
    grid-template-columns: 
        [full-start] minmax(var(--container-gap), 1fr)
        [wide-start] minmax(0, calc((var(--container-width, 1200px) - var(--content-width, 720px)) / 2))
        [main-start] min(var(--content-width, 720px), calc(100% - var(--container-gap) * 2)) [main-end]
        minmax(0, calc((var(--container-width, 1200px) - var(--content-width, 720px)) / 2)) [wide-end]
        minmax(var(--container-gap), 1fr) [full-end];
}

.gh-canvas > * {
    @apply col-[main];
}

.kg-width-wide,
.kg-content-wide > div {
    @apply col-[wide];
}

.kg-width-full {
    @apply col-[full];
}

/* 6. Navigation
/* ---------------------------------------------------------- */

.gh-navigation {
    @apply relative h-auto font-medium;
    font-size: 1.5rem;
    background-color: var(--background-color);
    color: var(--color-darker-gray);
}

.gh-navigation :is(.gh-navigation-logo, a:not(.gh-button), .gh-icon-button) {
    @apply text-inherit;
}

.gh-navigation-inner {
    @apply grid h-full items-center;
    grid-auto-flow: row dense;
    column-gap: 24px;
}

.gh-navigation-brand {
    @apply leading-none;
}

.gh-navigation-logo {
    @apply relative whitespace-nowrap font-bold;
    font-family: var(--gh-font-heading, var(--font-sans));
    font-size: calc(2.4rem * var(--factor, 1));
    letter-spacing: -0.015em;
}

.gh-navigation-logo img {
    @apply max-h-[40px];
}

.gh-navigation-menu {
    @apply flex items-center gap-6;
}

.gh-navigation .nav {
    @apply inline-flex items-center p-0 m-0 whitespace-nowrap list-none gap-9 font-semibold;
}

.gh-navigation .gh-more-toggle {
    @apply relative;
    margin: 0 -6px;
    font-size: inherit;
    text-transform: inherit;
}

.gh-navigation .gh-more-toggle svg {
    @apply w-6 h-6;
}

.gh-navigation-actions {
    @apply flex items-center justify-end gap-6;
    background-color: var(--background-color);
}

.gh-navigation.has-accent-color .gh-navigation-actions {
    background-color: var(--ghost-accent-color);
}

.gh-navigation-members {
    @apply flex items-center whitespace-nowrap gap-8;
}

.gh-navigation-members .gh-button {
    @apply font-semibold;
    font-size: inherit;
}

.gh-search {
    @apply mr-[-2px] ml-[-2px];
}

@media (max-width: 767px) {
    .gh-navigation-logo {
        @apply whitespace-normal;
    }

    .gh-navigation-members {
        @apply flex-col-reverse w-full gap-4;
    }

    .gh-navigation-actions .gh-search {
        @apply hidden;
    }
}

@media (min-width: 768px) {
    .gh-navigation-brand .gh-search {
        @apply hidden;
    }

    .gh-navigation:not(.is-dropdown-loaded) .gh-navigation-menu .nav > li {
        @apply opacity-0;
    }
}

/* 6.1. Navigation styles */

.gh-navigation.has-accent-color {
    background-color: var(--ghost-accent-color);
}

.gh-navigation.has-accent-color .gh-button {
    background-color: #fff;
    color: #15171a;
}

/* 6.2. Navigation layout */

.gh-navigation .gh-navigation-inner {
    grid-template-columns: 1fr auto 1fr;
}

.gh-navigation .gh-navigation-brand {
    @apply flex items-center min-h-20;
    grid-row-start: 1;
    grid-column-start: 2;
}
/* ... */

